# ez-grpo

./: README.md  pyproject.toml
Qwen2-0.5B-GRPO/runs/Jul27_19-35-18_192-222-59-120/: events.out.tfevents.1753644921.192-222-59-120
Qwen2-0.5B-GRPO/runs/Jul27_19-46-25_192-222-59-120/: events.out.tfevents.1753645588.192-222-59-120
src/ez_grpo/: __init__.py  custom_trainer.py  trainer.py
